--- a/tree.html
+++ b/tree.html
@@ -56,7 +56,7 @@
             <ul>
                 <li>Khalida Khanam Pathan</li>
                 <li>Khushi Gadyal</li>
-                <li>Sanjana Mangave</li>
+                <li>Sanjana Managave</li>
                 <li>Sneha Kalal</li>
             </ul>
         </div>
@@ -81,3 +81,4 @@
     </div>
 </body>
 </html>
+
